fix for too long high school (My Education) values

--- a/stylesheets/components/myinfo.less
+++ b/stylesheets/components/myinfo.less
@@ -72,6 +72,7 @@
   		.font-size(1.5);
   		font-weight: bold;
   		margin: 0 0 5px;
+  		word-break: break-word;
   	}
   	&-text {
 			color: @black;
